<?xml version="1.0"?>
<package format="3">
  <name>vicon_velocity_estimator</name>
  <version>0.1.0</version>
  <description>Estimate linear and angular velocity from Vicon PoseStamped messages.</description>
  <maintainer email="tdepury@gmail.com">Tasman de Pury</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>vicon_receiver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
